# sygnalista

./: .gitignore  LICENSE  README.md
docs/: api.md  setup.md
python/: README.md  pyproject.toml
python/sygnalista_reporter/: __init__.py  diagnostics.py  logs.py  reporter.py
scripts/: generate_app_tokens.py
worker/: package-lock.json  package.json  tsconfig.json  wrangler.toml.example
worker/src/: github.ts  index.ts  jwt.ts  rateLimit.ts  report.ts  response.ts  schema.ts  telegram.ts
